[package]
name = "loa-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.20"
csv = "1.3"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
urlencoding = "2.1"
serde_json = "1.0"
indicatif = "0.17"
colored = "2.0"
